# duck_feeder

./: .gitignore  AGENTS.md  README.md  REVIEW_COMMENTS.md  checksum-Elixir.DuckFeeder.Writer.ParquetNif.exs  code_review.md  mix.exs
.github/workflows/: build_precompiled_nifs.yml  ci.yml
bench/: append_stream_multi_writer.exs  cdc_single_writer.exs
bench/support/: fake_components.exs
config/: config.exs  test.exs
dev/: docker-compose.integration.yml
docs/: append-streams.md  current_status.md  current_status_archive.md  existing_app_supervision.md  ingestion_broadway_logflare_review.md  optimal_ducklake_cdc_plan.md  plan.md  plan_compact.md  runtime.md  third_party_licenses.md  troubleshooting.md
lib/: duck_feeder.ex
lib/duck_feeder/: append_stream.ex  batch_dispatch.ex  batch_processor.ex  batch_queue.ex  bootstrap.ex  config.ex  designated_table.ex  ingest.ex  integration.ex  meta.ex  migration.ex  reconciler.ex  runtime.ex  runtime_support.ex  service.ex  sink.ex  storage.ex  stream_support.ex  table_pipeline.ex  table_pipeline_manager.ex  telemetry.ex  telemetry_forwarder.ex  temp_file_reaper.ex  writer.ex
native/duck_feeder_parquet/: Cargo.toml
native/duck_feeder_parquet/src/: lib.rs
priv/duckfeeder_meta/: create_tables.sql
scripts/: test_integration.sh
test/: duck_feeder_test.exs  test_helper.exs
test/duck_feeder/: append_stream_integration_test.exs  append_stream_test.exs  batch_dispatch_test.exs  batch_processor_test.exs  batch_queue_test.exs  (+18 more)
test_support/: duckdb_helpers.ex  fake_meta.ex  integration_helpers.ex  process_helpers.ex
(+93 files in other folders)
