[package]
name = "duck_feeder_parquet"
version = "0.1.0"
edition = "2021"

[lib]
name = "duck_feeder_parquet"
crate-type = ["cdylib"]

[features]
default = ["nif_version_2_17"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[dependencies]
rustler = { version = "0.37", features = ["serde"], default-features = false }
serde_json = "1"
arrow-array = "54"
arrow-schema = "54"
parquet = { version = "54", features = ["arrow"] }
